romeo (29)
semi (88)
up->raise (37)
file->special (43)
ding->mouse (45)
bravo(12)
atom(fix in cmu)
quote(fix in cmu)
spy->meta(fix in cmu)
arch->arsh(fix in cmu)